--- a/myportfolio/scss/_about.scss
+++ b/myportfolio/scss/_about.scss
@@ -15,6 +15,9 @@
       font-size: 1.125rem;
       font-weight: 700;
       color: black;
+      @media screen and (min-width: 64rem) {
+        font-size: 1.5rem;
+      }
     }
     .section_hr {
       margin: 30px 0 0 0;
@@ -26,6 +29,9 @@
     color: black;
     @media screen and (min-width: 40rem) {
       margin: 0;
+    }
+    @media screen and (min-width: 64rem) {
+      font-size: 1.25rem;
     }
   }
 }
