--- a/myportfolio/scss/_contact_form.scss
+++ b/myportfolio/scss/_contact_form.scss
@@ -19,6 +19,9 @@
     font-family: $global_content;
     font-size: 1rem;
     color: white;
+    @media screen and (min-width: 64rem) {
+      font-size: 1.25rem;
+    }
   }
   input {
     background: $section_bg;
