--- a/myportfolio/scss/_footer.scss
+++ b/myportfolio/scss/_footer.scss
@@ -27,5 +27,8 @@
     font-size: 1rem;
     color: white;
     text-transform: uppercase;
+    @media screen and (min-width: 64rem) {
+      font-size: 1.25rem;
+    }
   }
 }
