--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -22,6 +22,9 @@
       color: black;
       margin-top: 30px;
       margin-bottom: 30px;
+      @media screen and (min-width: 64rem) {
+        font-size: 1.25rem;
+      }
     }
   }
   .portfolio_wrap {
