--- a/myportfolio/scss/_header.scss
+++ b/myportfolio/scss/_header.scss
@@ -174,7 +174,7 @@
 .header_image_container {
   width: 100%;
   height: 100vh;
-  background-image: url('../images/DSC_2514-Edit-Edit.jpg');
+  background-image: url('../images/banner_photo.jpg');
   background-size: cover;
   background-position: center;
   text-align: center;
@@ -210,6 +210,9 @@
     margin-bottom: 0;
     left: 50%;
     transform: rotate(-90deg) translateY(-90%);
+    @media screen and (min-width: 64rem) {
+      font-size: 1rem;
+    }
   }
   div {
     width: 1px;
