--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -488,7 +488,7 @@
       border-bottom: 3px solid white;
       border-left: none;
       box-shadow: none; }
-  .contact_form_container button {
+  .contact_form_container #submit {
     font-family: "Raleway", sans-serif;
     font-size: 1.125rem;
     color: white;
@@ -497,14 +497,15 @@
     left: 50%;
     transform: translateX(-50%);
     transition: all .3s ease;
-    cursor: pointer; }
-    .contact_form_container button:hover, .contact_form_container button:focus {
+    cursor: pointer;
+    border: none; }
+    .contact_form_container #submit:hover, .contact_form_container #submit:focus {
       color: #ddc086; }
     @media screen and (min-width: 40rem) {
-      .contact_form_container button {
+      .contact_form_container #submit {
         font-size: 1.5rem; } }
     @media screen and (min-width: 64rem) {
-      .contact_form_container button {
+      .contact_form_container #submit {
         font-size: 2rem; } }
 
 .form_element {
