--- a/myportfolio/scss/styles.scss
+++ b/myportfolio/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "services";
 @import "portfolio";
 @import "strength";
-@import "contact_form";
+@import "form";
 @import "footer";
 
 //* {
