--- a/myportfolio/scss/_header.scss
+++ b/myportfolio/scss/_header.scss
@@ -177,6 +177,7 @@
   background-image: url('../images/banner_photo.jpg');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   text-align: center;
   position: relative;
   h2 {
