--- a/myportfolio/scss/_footer.scss
+++ b/myportfolio/scss/_footer.scss
@@ -32,3 +32,24 @@
     }
   }
 }
+
+.backToTop_wrap {
+  position: fixed;
+  right: 2%;
+  bottom: 2%;
+  width: 50px;
+  height: 50px;
+  background: rgba(0, 0, 0, .5);
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.5s ease;
+  z-index: 3;
+  .backToTop {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-size: 3rem;
+    color: white;
+  }
+}
