--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio_container {
   text-align: center;
-  margin-top: 60px;
+  padding-top: 60px;
   .portfolio_description {
     padding: 0 10px 0 10px;
     h2 {
@@ -27,8 +27,118 @@
       }
     }
   }
-  .portfolio_wrap {
-    height: 200px;
-    background-color: $section_bg;
+}
+
+@mixin portfolio_wrap {
+  position: relative;
+  height: 480px;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+}
+
+#lotr {
+  background: url("../images/lotr.jpg");
+  @include portfolio_wrap;
+}
+
+#crunican {
+  background: url("../images/crunican_adrian.jpg");
+  @include portfolio_wrap;
+}
+
+#logofolio {
+  background: url("../images/crunican.jpg");
+  @include portfolio_wrap;
+}
+
+#photo {
+  background: url("../images/wave.jpg");
+  @include portfolio_wrap;
+}
+
+.portfolio_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1;
+  transition: all .3s ease;
+  h3 {
+    opacity: 0;
+    font-family: $global_title;
+    font-size: 1.125rem;
+    color: $the_gold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
+    }
+    @media screen and (min-width: 64rem) {
+      font-size: 2rem;
+    }
+  }
+  &.hide_portfolio_overlay {
+    background-color: rgba(0, 0, 0, 0.8);
+    h3 {
+      opacity: 1;
+    }
+  }
+}
+
+.portfolio_showboard {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .95);
+  z-index: 30;
+  &.close_showboard {
+    display: block;
+  }
+  h4 {
+    font-family: $global_title;
+    font-size: 1.125rem;
+    color: $the_gold;
+    text-align: left;
+    margin-top: 30px;
+    @media screen and (min-width: 40rem) {
+      font-size: 1.5rem;
+    }
+    @media screen and (min-width: 64rem) {
+      font-size: 2rem;
+    }
+  }
+  p {
+    font-family: $global_content;
+    font-size: 1rem;
+    color: white;
+    text-align: left;
+    @media screen and (min-width: 64rem) {
+      font-size: 1.25rem;
+    }
+  }
+}
+
+.portfolio_content_wrap {
+  margin-top: 5%;
+}
+
+.portfolio_close {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  span {
+    color: white;
+    font-size: 2rem;
   }
 }
