--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -38,12 +38,12 @@
 }
 
 #lotr {
-  background: url("../images/lotr.jpg");
+  background: url("../images/lotr_design.jpg");
   @include portfolio_wrap;
 }
 
 #crunican {
-  background: url("../images/crunican_adrian.jpg");
+  background: url("../images/crunican_web.jpg");
   @include portfolio_wrap;
 }
 
