--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -48,7 +48,7 @@
 }
 
 #logofolio {
-  background: url("../images/crunican.jpg");
+  background: url("../images/the_north_studio.jpg");
   @include portfolio_wrap;
 }
 
