--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -8,6 +8,7 @@
   position: fixed;
   width: 100%;
   height: 80px;
+  background: black;
   top: 0;
   left: 0;
   right: 0;
@@ -146,7 +147,6 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
   text-align: center;
   position: relative; }
   .header_image_container h2 {
@@ -431,7 +431,7 @@
   cursor: pointer; }
 
 #logofolio {
-  background: url("../images/crunican.jpg");
+  background: url("../images/the_north_studio.jpg");
   position: relative;
   height: 480px;
   background-size: cover;
