--- a/myportfolio/scss/_header.scss
+++ b/myportfolio/scss/_header.scss
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   height: 80px;
+  background: black;
   top: 0;
   left: 0;
   right: 0;
@@ -176,7 +177,6 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
   text-align: center;
   position: relative;
   h2 {
