--- a/myportfolio/scss/_footer.scss
+++ b/myportfolio/scss/_footer.scss
@@ -56,5 +56,12 @@
     transform: translateY(-50%) translateX(-50%);
     font-size: 3rem;
     color: white;
+    transition: all .3s ease;
+  }
+  &:hover,
+  &:focus {
+    .backToTop {
+      color: $the_gold;
+    }
   }
 }
