--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -65,3 +65,28 @@
         }
     }
 }
+
+.portfolio-post-banner-wrap {
+    height: 60vh;
+}
+
+.portfolio-post-banner {
+    width: 100%;
+    height: 100%;
+    background: pink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolio-post-intro-img-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolio-post-intro-img {
+    width: 400px;
+    height: 300px;
+    background: greenyellow;
+}
