--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -76,6 +76,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    h3 {
+        font-family: $global_title;
+        font-size: 1.125rem;
+        color: white;
+        @media screen and (min-width: 40rem) {
+            font-size: 1.5rem;
+        }
+        @media screen and (min-width: 64rem) {
+            font-size: 2rem;
+        }
+    }
 }
 
 .portfolio-post-intro-img-wrap {
