--- a/wp-content/themes/shanjiang/scss/_portfolio.scss
+++ b/wp-content/themes/shanjiang/scss/_portfolio.scss
@@ -104,7 +104,7 @@
     }
     h4 {
         font-family: $global_title;
-        font-size: 1.125rem;
+        font-size: 1.125remF;
         color: $the_gold;
         text-align: left;
         margin-top: 30px;
