--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -488,7 +488,7 @@
     display: block; }
   .portfolio_showboard h4 {
     font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
+    font-size: 1.125remF;
     color: #ddc086;
     text-align: left;
     margin-top: 30px; }
@@ -694,6 +694,16 @@
   display: flex;
   justify-content: center;
   align-items: center; }
+  .portfolio-post-banner h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.125rem;
+    color: white; }
+    @media screen and (min-width: 40rem) {
+      .portfolio-post-banner h3 {
+        font-size: 1.5rem; } }
+    @media screen and (min-width: 64rem) {
+      .portfolio-post-banner h3 {
+        font-size: 2rem; } }
 
 .portfolio-post-intro-img-wrap {
   display: flex;
