--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -693,17 +693,21 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
   .portfolio-post-banner h3 {
     font-family: "Raleway", sans-serif;
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     color: white; }
-    @media screen and (min-width: 40rem) {
-      .portfolio-post-banner h3 {
-        font-size: 1.5rem; } }
     @media screen and (min-width: 64rem) {
       .portfolio-post-banner h3 {
         font-size: 2rem; } }
+  .portfolio-post-banner .portfolio-banner-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1; }
 
 .portfolio-post-intro-img-wrap {
   display: flex;
