--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -76,16 +76,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     h3 {
         font-family: $global_title;
-        font-size: 1.125rem;
+        font-size: 1.5rem;
         color: white;
-        @media screen and (min-width: 40rem) {
-            font-size: 1.5rem;
-        }
         @media screen and (min-width: 64rem) {
             font-size: 2rem;
         }
+    }
+    .portfolio-banner-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .5);
+        z-index: -1;
     }
 }
 
