--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -698,7 +698,10 @@
   .portfolio-post-banner h3 {
     font-family: "Raleway", sans-serif;
     font-size: 1.5rem;
-    color: white; }
+    color: white;
+    position: relative;
+    text-transform: uppercase;
+    z-index: 3; }
     @media screen and (min-width: 64rem) {
       .portfolio-post-banner h3 {
         font-size: 2rem; } }
@@ -707,7 +710,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: -1; }
+    z-index: 1; }
 
 .portfolio-post-intro-img-wrap {
   display: flex;
