--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -81,6 +81,9 @@
         font-family: $global_title;
         font-size: 1.5rem;
         color: white;
+        position: relative;
+        text-transform: uppercase;
+        z-index: 3;
         @media screen and (min-width: 64rem) {
             font-size: 2rem;
         }
@@ -90,7 +93,7 @@
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, .5);
-        z-index: -1;
+        z-index: 1;
     }
 }
 
