--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -686,7 +686,14 @@
     color: #ddc086; }
 
 .portfolio-post-banner-wrap {
-  height: 60vh; }
+  height: 60vh;
+  margin-bottom: 30px; }
+  @media screen and (min-width: 40rem) {
+    .portfolio-post-banner-wrap {
+      margin-bottom: 60px; } }
+  @media screen and (min-width: 64rem) {
+    .portfolio-post-banner-wrap {
+      margin-bottom: 120px; } }
 
 .portfolio-post-banner {
   width: 100%;
@@ -694,7 +701,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative; }
+  position: relative;
+  text-align: center; }
   .portfolio-post-banner h3 {
     font-family: "Raleway", sans-serif;
     font-size: 1.5rem;
@@ -702,9 +710,12 @@
     position: relative;
     text-transform: uppercase;
     z-index: 3; }
-    @media screen and (min-width: 64rem) {
+    @media screen and (min-width: 40rem) {
       .portfolio-post-banner h3 {
         font-size: 2rem; } }
+    @media screen and (min-width: 64rem) {
+      .portfolio-post-banner h3 {
+        font-size: 3rem; } }
   .portfolio-post-banner .portfolio-banner-overlay {
     position: absolute;
     width: 100%;
@@ -715,9 +726,25 @@
 .portfolio-post-intro-img-wrap {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 30px; }
+  @media screen and (min-width: 40rem) {
+    .portfolio-post-intro-img-wrap {
+      margin-bottom: 60px; } }
+  @media screen and (min-width: 64rem) {
+    .portfolio-post-intro-img-wrap {
+      margin-bottom: 120px; } }
 
 .portfolio-post-intro-img {
   width: 400px;
   height: 300px;
   background: greenyellow; }
+
+.portfolio-post-desc-wrap {
+  margin-bottom: 30px; }
+  @media screen and (min-width: 40rem) {
+    .portfolio-post-desc-wrap {
+      margin-bottom: 60px; } }
+  @media screen and (min-width: 64rem) {
+    .portfolio-post-desc-wrap {
+      margin-bottom: 120px; } }
