--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -68,6 +68,13 @@
 
 .portfolio-post-banner-wrap {
     height: 60vh;
+    margin-bottom: 30px;
+    @media screen and (min-width: 40rem) {
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width: 64rem) {
+        margin-bottom: 120px;
+    }
 }
 
 .portfolio-post-banner {
@@ -77,6 +84,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    text-align: center;
     h3 {
         font-family: $global_title;
         font-size: 1.5rem;
@@ -84,8 +92,11 @@
         position: relative;
         text-transform: uppercase;
         z-index: 3;
-        @media screen and (min-width: 64rem) {
+        @media screen and (min-width: 40rem) {
             font-size: 2rem;
+        }
+        @media screen and (min-width: 64rem) {
+            font-size: 3rem;
         }
     }
     .portfolio-banner-overlay {
@@ -101,10 +112,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
+    @media screen and (min-width: 40rem) {
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width: 64rem) {
+        margin-bottom: 120px;
+    }
 }
 
 .portfolio-post-intro-img {
     width: 400px;
     height: 300px;
     background: greenyellow;
+}
+
+.portfolio-post-desc-wrap {
+    margin-bottom: 30px;
+    @media screen and (min-width: 40rem) {
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width: 64rem) {
+        margin-bottom: 120px;
+    }
 }
