--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -418,8 +418,7 @@
   position: relative;
   height: 480px;
   background-size: cover;
-  background-position: center;
-  cursor: pointer; }
+  background-position: center; }
 
 #lotr {
   background: url("../images/lotr_design.jpg"); }
