--- a/wp-content/themes/shanjiang/scss/_portfolio.scss
+++ b/wp-content/themes/shanjiang/scss/_portfolio.scss
@@ -34,22 +34,7 @@
     height: 480px;
     background-size: cover;
     background-position: center;
-}
-
-#lotr {
-    background: url("../images/lotr_design.jpg");
-}
-
-#crunican {
-    background: url("../images/crunican_web.jpg");
-}
-
-#logofolio {
-    background: url("../images/the_north_studio.jpg");
-}
-
-#photo {
-    background: url("../images/wave.jpg");
+    cursor: pointer;
 }
 
 .portfolio_overlay {
