--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -677,7 +677,11 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  text-align: center; }
+  text-align: center;
+  padding: 0 15px; }
+  @media screen and (min-width: 40rem) {
+    .portfolio-post-banner {
+      padding: 0; } }
   .portfolio-post-banner h3 {
     font-family: "Raleway", sans-serif;
     font-size: 1.5rem;
@@ -711,12 +715,31 @@
       margin-bottom: 120px; } }
 
 .portfolio-post-intro-img {
-  width: 400px;
-  height: 300px;
-  background: greenyellow; }
+  width: 100%;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); }
+  @media screen and (min-width: 40rem) {
+    .portfolio-post-intro-img {
+      width: 560px; } }
 
 .portfolio-post-desc-wrap {
   margin-bottom: 30px; }
+  .portfolio-post-desc-wrap h2 {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.25rem;
+    color: black; }
+    @media screen and (min-width: 40rem) {
+      .portfolio-post-desc-wrap h2 {
+        font-size: 1.5rem; } }
+    @media screen and (min-width: 64rem) {
+      .portfolio-post-desc-wrap h2 {
+        font-size: 2rem; } }
+  .portfolio-post-desc-wrap p {
+    font-family: "Times New Roman", serif;
+    font-size: 1rem;
+    color: black; }
+    @media screen and (min-width: 64rem) {
+      .portfolio-post-desc-wrap p {
+        font-size: 1.25rem; } }
   @media screen and (min-width: 40rem) {
     .portfolio-post-desc-wrap {
       margin-bottom: 60px; } }
