--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -85,6 +85,10 @@
     align-items: center;
     position: relative;
     text-align: center;
+    padding: 0 15px;
+    @media screen and (min-width: 40rem) {
+        padding: 0;
+    }
     h3 {
         font-family: $global_title;
         font-size: 1.5rem;
@@ -122,13 +126,34 @@
 }
 
 .portfolio-post-intro-img {
-    width: 400px;
-    height: 300px;
-    background: greenyellow;
+    width: 100%;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, .3);
+    @media screen and (min-width: 40rem) {
+        width: 560px;
+    }
 }
 
 .portfolio-post-desc-wrap {
     margin-bottom: 30px;
+    h2 {
+        font-family: $global_title;
+        font-size: 1.25rem;
+        color: black;
+        @media screen and (min-width: 40rem) {
+            font-size: 1.5rem;
+        }
+        @media screen and (min-width: 64rem) {
+            font-size: 2rem;
+        }
+    }
+    p {
+        font-family: $global_content;
+        font-size: 1rem;
+        color: black;
+        @media screen and (min-width: 64rem) {
+            font-size: 1.25rem;
+        }
+    }
     @media screen and (min-width: 40rem) {
         margin-bottom: 60px;
     }
