--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -726,7 +726,7 @@
   .portfolio-post-desc-wrap h2 {
     font-family: "Raleway", sans-serif;
     font-size: 1.25rem;
-    color: black; }
+    color: #ddc086; }
     @media screen and (min-width: 40rem) {
       .portfolio-post-desc-wrap h2 {
         font-size: 1.5rem; } }
