--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -138,7 +138,7 @@
     h2 {
         font-family: $global_title;
         font-size: 1.25rem;
-        color: black;
+        color: $the_gold;
         @media screen and (min-width: 40rem) {
             font-size: 1.5rem;
         }
