--- a/wp-content/themes/shanjiang/scss/_footer.scss
+++ b/wp-content/themes/shanjiang/scss/_footer.scss
@@ -135,6 +135,10 @@
 
 .portfolio-post-desc-wrap {
     margin-bottom: 30px;
+    padding: 0 15px;
+    @media screen and (min-width: 40rem) {
+        padding: 0;
+    }
     h2 {
         font-family: $global_title;
         font-size: 1.25rem;
