--- a/wp-content/themes/shanjiang/css/styles.css
+++ b/wp-content/themes/shanjiang/css/styles.css
@@ -4,6 +4,12 @@
   background-color: #ddc086;
   margin: 0 auto; }
 
+.header_image_container {
+  opacity: 0;
+  transition: opacity 1s ease; }
+  .loaded .header_image_container {
+    opacity: 1; }
+
 .header_bar_container {
   position: fixed;
   width: 100%;
