--- a/wp-content/themes/shanjiang/scss/_header.scss
+++ b/wp-content/themes/shanjiang/scss/_header.scss
@@ -1,3 +1,12 @@
+.header_image_container {
+    opacity: 0;
+    transition: opacity 1s ease;
+
+    .loaded & {
+        opacity: 1;
+    }
+}
+
 .header_bar_container {
     position: fixed;
     width: 100%;
@@ -8,29 +17,37 @@
     right: 0;
     z-index: 30;
     transition: all .3s ease;
+
     &.shrink {
         background-color: white;
         height: 60px;
         box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
         .title_wrap {
             border-bottom: solid 1px #cccccc;
+
             p {
                 color: black;
             }
         }
+
         .logo_wrap {
             border-left: solid 1px #cccccc;
             border-right: solid 1px #cccccc;
             border-bottom: solid 1px #cccccc;
+
             img {
                 width: 50px;
             }
         }
+
         .burger_button_wrap {
             border-bottom: solid 1px #cccccc;
+
             .burger_button div {
                 background-color: black;
             }
+
             .active div {
                 background-color: $the_gold;
             }
@@ -41,6 +58,7 @@
 .title_wrap {
     position: relative;
     border-bottom: solid 1px #333333;
+
     p {
         font-size: 1.25rem;
         color: white;
@@ -56,6 +74,7 @@
     border-left: solid 1px #333333;
     border-right: solid 1px #333333;
     border-bottom: solid 1px #333333;
+
     img {
         position: absolute;
         width: 60px;
@@ -68,6 +87,7 @@
 .burger_button_wrap {
     position: relative;
     border-bottom: solid 1px #333333;
+
     .burger_button {
         position: absolute;
         top: 50%;
@@ -75,19 +95,23 @@
         transform: translateY(-50%) translateX(-50%);
         z-index: 20;
         cursor: pointer;
+
         div {
             width: 24px;
             height: 1px;
             background-color: white;
             transition: all 0.5s ease;
         }
+
         .top {
             margin-bottom: 7.5px;
         }
+
         .mid {
             margin-bottom: 7.5px;
         }
     }
+
     .active {
         .top {
             transform: rotate(45deg);
@@ -116,15 +140,19 @@
     height: 100vh;
     background-color: black;
     transition: all .5s ease;
+
     nav {
         position: relative;
         text-align: center;
         top: 10%;
+
         ul {
             margin-left: 0;
+
             li {
                 list-style-type: none;
                 margin-bottom: 10px;
+
                 a {
                     font-family: $global_title;
                     font-size: 1.875rem;
@@ -133,6 +161,7 @@
                     transition: all .5s ease;
                     position: relative;
                     text-decoration: none;
+
                     &:before {
                         content: "";
                         position: absolute;
@@ -147,15 +176,18 @@
                         -webkit-transition: all 0.3s ease-in-out 0s;
                         transition: all 0.3s ease-in-out 0s;
                     }
+
                     &:hover,
                     &:focus {
                         color: $the_gold;
+
                         &:before {
                             visibility: visible;
                             -webkit-transform: scaleX(1);
                             transform: scaleX(1);
                         }
                     }
+
                     @media screen and (min-width: 64rem) {
                         font-size: 2rem;
                     }
@@ -163,6 +195,7 @@
             }
         }
     }
+
     &.show_menu {
         right: 0;
     }
@@ -179,6 +212,7 @@
     background-position: center;
     text-align: center;
     position: relative;
+
     h2 {
         font-family: $global_title;
         font-size: 1.875rem;
@@ -188,9 +222,11 @@
         margin-bottom: 0;
         top: 50%;
         transform: translateY(-50%);
+
         @media screen and (min-width: 40rem) {
             font-size: 3rem;
         }
+
         @media screen and (min-width: 90rem) {
             font-size: 3.5rem;
         }
@@ -200,6 +236,7 @@
 .scroll-to {
     text-align: center;
     position: relative;
+
     p {
         font-family: $global_title;
         font-size: 0.875rem;
@@ -210,10 +247,12 @@
         margin-bottom: 0;
         left: 50%;
         transform: rotate(-90deg) translateY(-90%);
+
         @media screen and (min-width: 64rem) {
             font-size: 1rem;
         }
     }
+
     div {
         width: 1px;
         height: 80px;
